// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mutation createProduct should insert new product into mongodb 1`] = `1`;

exports[`Mutation createProduct should insert new product into mongodb 2`] = `
Array [
  Object {
    "_id": "585b11e7adb8b5f2d655da01",
    "colors": Array [
      "red",
    ],
<<<<<<< HEAD
    "createAt": 2017-06-13T04:41:20.000Z,
=======
    "createAt": 2017-08-09T08:00:00.000Z,
>>>>>>> origin/backend
    "hashtags": Array [
      "a",
      "b",
      "c",
    ],
    "name": "a",
    "owner": "5a10494ee67657f236e6b0a2",
    "pictures": Array [
      "https://th-live-02.slatic.net/p/7/hequ-1483111676-1231065-c566b543a82cfe5a0e279dbf161bd13e-catalog_233.jpg",
    ],
<<<<<<< HEAD
    "promotion_end": 2017-06-13T04:41:20.000Z,
    "promotion_start": 2017-06-13T04:41:20.000Z,
=======
    "promotion_end": 2017-08-09T08:00:00.000Z,
    "promotion_start": 2017-08-09T08:00:00.000Z,
>>>>>>> origin/backend
    "size": Array [
      "S",
    ],
    "type": "Product",
<<<<<<< HEAD
    "updateAt": 2017-06-13T04:41:20.000Z,
=======
    "updateAt": 2017-08-09T08:00:00.000Z,
>>>>>>> origin/backend
  },
]
`;

exports[`Mutation createProduct should insert new product into mongodb 3`] = `
Object {
  "_id": "585b11e7adb8b5f2d655da01",
  "colors": Array [
    "red",
  ],
<<<<<<< HEAD
  "createAt": 2017-06-13T04:41:20.000Z,
=======
  "createAt": 2017-08-09T08:00:00.000Z,
>>>>>>> origin/backend
  "hashtags": Array [
    "a",
    "b",
    "c",
  ],
  "name": "a",
  "owner": "5a10494ee67657f236e6b0a2",
  "pictures": Array [
    "https://th-live-02.slatic.net/p/7/hequ-1483111676-1231065-c566b543a82cfe5a0e279dbf161bd13e-catalog_233.jpg",
  ],
<<<<<<< HEAD
  "promotion_end": 2017-06-13T04:41:20.000Z,
  "promotion_start": 2017-06-13T04:41:20.000Z,
=======
  "promotion_end": 2017-08-09T08:00:00.000Z,
  "promotion_start": 2017-08-09T08:00:00.000Z,
>>>>>>> origin/backend
  "size": Array [
    "S",
  ],
  "type": "Product",
<<<<<<< HEAD
  "updateAt": 2017-06-13T04:41:20.000Z,
=======
  "updateAt": 2017-08-09T08:00:00.000Z,
>>>>>>> origin/backend
}
`;
